--- a/public/styles/bourbon/_bourbon.scss
+++ b/public/styles/bourbon/_bourbon.scss
@@ -1,9 +1,11 @@
 // Custom Functions
+@import "functions/compact";
 @import "functions/deprecated-webkit-gradient";
 @import "functions/flex-grid";
 @import "functions/grid-width";
 @import "functions/linear-gradient";
 @import "functions/modular-scale";
+@import "functions/px-to-em";
 @import "functions/radial-gradient";
 @import "functions/render-gradients";
 @import "functions/tint-shade";
@@ -12,12 +14,12 @@
 // CSS3 Mixins
 @import "css3/animation";
 @import "css3/appearance";
+@import "css3/backface-visibility";
 @import "css3/background";
 @import "css3/background-image";
 @import "css3/background-size";
 @import "css3/border-image";
 @import "css3/border-radius";
-@import "css3/box-shadow";
 @import "css3/box-sizing";
 @import "css3/columns";
 @import "css3/flex-box";
@@ -25,11 +27,14 @@
 @import "css3/hidpi-media-query";
 @import "css3/image-rendering";
 @import "css3/inline-block";
+@import "css3/keyframes";
 @import "css3/linear-gradient";
+@import "css3/perspective";
 @import "css3/radial-gradient";
 @import "css3/transform";
 @import "css3/transition";
 @import "css3/user-select";
+@import "css3/placeholder";
 
 // Addons & other mixins
 @import "addons/button";
@@ -39,4 +44,10 @@
 @import "addons/html5-input-types";
 @import "addons/position";
 @import "addons/prefixer";
+@import "addons/retina-image";
+@import "addons/size";
 @import "addons/timing-functions";
+@import "addons/triangle";
+
+// Soon to be deprecated Mixins
+@import "bourbon-deprecated-upcoming";
